--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="forgotPass">Passwort vergessen?</string>
     <string name="register">Registrieren</string>
     <string name="pw">Password</string>
+    <string name="pwWdhg">Password wiederholen</string>
     <string name="username">Benutzername</string>
+    <string name="email">E-Mail</string>
 
 </resources>
