--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,10 @@
     <string name="nachname">Nachname :</string>
     <string name="telefon">Telefon :</string>
 
+    <!-- Poll -->
+    <string name="poll_label_create">Neue Abstimmung erstellen</string>
+    <string name="poll_question">Frage?</string>
+    <string name="poll_question_hint">Frage hier eingeben...</string>
+    <string name="poll_plus">+</string>
+
 </resources>
