Finished Create Poll

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string name="poll_question">Frage?</string>
     <string name="poll_question_hint">Frage hier eingeben...</string>
     <string name="poll_plus">+</string>
+    <string name="poll_send">Senden</string>
 
 </resources>
