--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,7 @@
     <string name="vorname">Vorname :</string>
     <string name="nachname">Nachname :</string>
     <string name="telefon">Telefon :</string>
+    <string name="horst_teesofa">Horst Teesofa</string>
+    <string name="kontakte_durchsuchen">Kontakte durchsuchen</string>
 
 </resources>
