change to Linear Layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="telefon">Telefon :</string>
     <string name="horst_teesofa">Horst Teesofa</string>
     <string name="kontakte_durchsuchen">Kontakte durchsuchen</string>
+    <string name="horst_teesofa">Horst Teesofa</string>
 
 </resources>
