constraint to linear layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="telefon">Telefon :</string>
     <string name="horst_teesofa">Horst Teesofa</string>
     <string name="kontakt_suchen">Kontakt suchen</string>
+    <string name="todo">TODO</string>
 
 
 </resources>
