--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,9 @@
     <string name="telefon">Telefon :</string>
     <string name="gaeste">Gäste</string>
     <string name="name">Name</string>
+    <string name="admin">Admin</string>
+    <string name="name">Name</string>
+    <string name="todo">TODO</string>
+    <string name="todo">TODO</string>
 
 </resources>
