--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="e_mail">E-Mail :</string>
     <string name="ihre_anfrage">Ihre Anfrage</string>
     <string name="senden">Senden</string>
-    <string name="vorname">Vorname :</string>
+    <string name="vorname">Name :</string>
     <string name="telefon">Telefon :</string>
     <string name="nachname">Nachname :</string>
     <string name="adresse">Adresse :</string>
