--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="poll_question_hint">Frage hier eingeben...</string>
     <string name="poll_plus">+</string>
     <string name="poll_send">Senden</string>
-    <string name="add_event">Veranstaltung ertstellen</string>
+    <string name="add_event">Veranstaltung erstellen</string>
 
     <string name="profildaten_bearbeiten">Profildaten bearbeiten</string>
     <string name="_01_01_2018">01.01.2018</string>
