--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
 
     <!-- Poll -->
     <string name="poll_label_create">Neue Abstimmung erstellen</string>
-    <string name="poll_label_poll">Abstimmen</string>
+    <string name="poll_label_poll">Abstimmen</string>o
     <string name="poll_question">Frage?</string>
     <string name="poll_question_hint">Frage hier eingeben...</string>
     <string name="poll_plus">+</string>
